# panda-cpp-scripting

./: .gitignore  CMakeLists.txt  README.md
etc/: Config.prc
res/: TestScript.py
src/dtool/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/scripting/: CMakeLists.txt  config_scripting.cpp  config_scripting.h  pyobjectWrapper.cpp  pyobjectWrapper.h  scriptManager.cpp  scriptManager.h  scriptingSymbols.h
